# Python-Projects

./: Readme.md  quiz_game.py
Proj 2/: Calc_with_history.py
Proj 3/fast-api/: .env  main.py  pyproject.toml
Proj 3/fast-api/app/: app.py  schema.py
Proj1/: About.md  fake_news_headline_generator.py
